--- a/index.html
+++ b/index.html
@@ -36,11 +36,36 @@
     </div>
 </div>
 <div class="form-container" id="form-container">
-    <form action="sendmessage.php" method="post">
+    <!--<form action="sendmessage.php" method="post">
         <input type="text" id="name" name="name" placeholder="Ваше имя">
         <input type="email" id="email" name="email" placeholder="Ваш email">
         <input type="submit" value="Отправить">
-    </form>
+    </form>-->
+    <!-- Begin MailChimp Signup Form -->
+    <div id="mc_embed_signup">
+        <form action="//makintour.us12.list-manage.com/subscribe/post?u=f93514d54fd2d25bb12b9860d&amp;id=46f9f4fd80" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+                <input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="Ваше имя">
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Ваш email">
+                <input type="submit" value="Отправить" name="subscribe" id="mc-embedded-subscribe" class="button">
+                <div id="mce-responses" class="clear">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                    <input type="text" name="b_f93514d54fd2d25bb12b9860d_46f9f4fd80" tabindex="-1" value="">
+                </div>
+                <!--<div class="clear">
+                    <input type="submit" value="Отправить" name="subscribe" id="mc-embedded-subscribe" class="button">
+                </div>-->
+            </div>
+        </form>
+    </div>
+
+    <!--End mc_embed_signup-->
 </div>
+
+
+
 </body>
 </html>
