--- a/thanks.html
+++ b/thanks.html
@@ -11,7 +11,7 @@
     <div class="main-header-container">
         <img src="img/pink-line.jpg">
         <p class="main-header">Спасибо за отклик</p>
-        <p>Представитель компании скоро свяжется с вами</p>
+        <p>Представитель компании свяжется с вами в ближайшее время</p>
     </div>
     <!--<div class="button-container">
         <a href="#form-container">Узнать больше</a>
